--- a/style.css
+++ b/style.css
@@ -162,6 +162,9 @@ body {
   box-shadow: 0 0 30px 6px rgba(90, 158, 116, 0.8); /* Initiale */
   animation: pulse-and-scale 3s infinite ease-in-out; /* Une seule animation */
   transition: transform 0.3s ease, box-shadow 0.3s ease; /* Transition pour hover */
+  display: flex;
+  justify-self: center !important;
+  align-self: center !important;
 }
 
 .photo__item:hover {
@@ -242,6 +245,7 @@ body {
 @media screen and (max-width: 768px) {
   .header {
     flex-direction: column;
+    height: 200px;
 
   }
   
@@ -278,18 +282,18 @@ body {
     width: 100%;
     flex-direction: column;
     
+    
    
   }
   .title__main{
     width: 100%;
+    font-size: 52px;
   }
 
 
   .photo__item {
-    display: flex;
-    order: -1;
-    width: 140px;
-    height: 140px;
+    display: none;
+   
    
   }
 
@@ -299,10 +303,14 @@ body {
     font-size: 2rem;
   }
 
+  .presentation__main{
+    width: 70%;
+  }
+
   .paragraph__main {
     flex-direction: column;
     text-align: center;
-    font-size: 1rem;
+    font-size: 1.5rem;
     line-height: 1.5rem;
   }
   .text__content {
@@ -311,6 +319,9 @@ body {
 
   .photo__accueil {
     margin-top: 1.5rem;
+    display: flex;
+    justify-content: center !important;
+    align-items: center !important;
   }
 
   .about-me{
@@ -329,6 +340,11 @@ body {
     height: 60%;
     display: flex;
     flex-direction: column !important;
+  }
+
+  .footer{
+    height: 200px;
+    font-size: 24px;
   }
 
 
