--- a/style.css
+++ b/style.css
@@ -244,6 +244,7 @@ body {
 
 @media screen and (max-width: 768px) {
   .header {
+    width: 100%;
     flex-direction: column;
     height: 200px;
 
@@ -346,6 +347,7 @@ body {
  
 
   .footer{
+    width: 100%;
     height: 200px;
     font-size: 24px;
   }
