--- a/style.css
+++ b/style.css
@@ -349,7 +349,7 @@ body {
     height: 60%;
     display: flex;
     flex-direction: column !important;
-    min-width: 800px;
+    min-height: 800px;
   }
 
 
